--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   device_preview: ^1.1.0
   flutter_svg: ^1.0.0
+  http: ^0.13.5
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
