--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,12 @@ dependencies:
   flutter_svg: ^1.0.0
   http: ^0.13.5
   provider: ^6.0.3
+  carousel_slider: ^4.1.1
+  shimmer: ^2.0.0
+  get: ^4.6.5
+  badges: ^2.0.3
+  cached_network_image: ^3.2.1
+  
 
 dev_dependencies:
   flutter_test:
